# bingo-now-web-server

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: deploy.yml
src/: main.rs
src/bingo/: events.rs  game.rs  mod.rs  patterns.rs
src/handlers/: bingo.rs  mod.rs
src/middleware/: auth.rs  version.rs
