[package]
name = "bingo-now"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arc-swap = "1.7.1"
axum = "0.8.6"
axum-macros = "0.5.0"
chrono = {version="0.4.42", features=["serde"]}
dotenvy = "0.15.7"
rand = "0.9.2"
serde = {version="1.0.228", features=["derive", "rc"]}
tokio = { version="1.0.228", features=["full"] }
tower = "0.5.2"
tower-http = { version="0.6.6", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version="0.3.20", features=["env-filter"] }
uuid = { version="1.18.1", features=["v4", "serde"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }
